--- a/index.html
+++ b/index.html
@@ -165,30 +165,40 @@
       
     <form>
       <div class="form-group">
+      <label for = "nome">Nome:</label>
+            <input type="text" class="form-control" id="nome" onkeyup="validaNome()">
+            </div>
+            <div id='txtNome'></div>
+      <div class="form-group">
         <label for="exampleFormControlSelect1">Como te contatar:</label>
         <select class="form-control" id="exampleFormControlSelect1">
           <option>Whatsapp</option>
-          <option>Telefone</option>
           <option>Celular</option>
           <option>E-Mail</option>
         </select>
       </div>
       <div class="form-group">
-        <label for="exampleFormControlInput1">Contato:</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nome@exemplo.com">
+        <label for="exampleFormControlInput1">Celular:</label>
+        <input type="number" class="form-control" id="exampleFormControlInput1" placeholder="11 91111-1111">
       </div>
       <div class="form-group">
-        <label for="exampleFormControlTextarea1">Feedback/Perguntas:</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" style="height: 260px"></textarea>
+        <label for="exampleFormControlInput1">E-Mail:</label>
+        <input type="email" class="form-control" id="email" onkeyup="validaEmail()" placeholder="nome@exemplo.com">
       </div>
+      <div id='txtEmail'></div>
+      <div class="form-group">
+        <label for="exampleFormControlTextarea1">Feedback/Perguntas:</label>
+        <textarea class="form-control" id="assunto" rows="3" style="height: 200px" onkeyup='validaAssunto()'></textarea>
+      </div>
+      <div id='txtAssunto'></div>
       <div class="form-group d-flex justify-content-end">
-        <button class="btn btn-outline-success">Enviar</button>
+        <button  onclick="enviar()" class="btn btn-outline-success">Enviar</button>
       </div>
     </form>
 
     </div>
     <div class="col-md-6">
-      <iframe class= "w-100" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2404.3104569827997!2d-46.84671974113744!3d-23.64757710167212!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1650291630297!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" onmousemove="mapaZoom()" onmouseout="mapaNormal()" id="mapa"></iframe>
+      <iframe class= "w-100" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2404.3104569827997!2d-46.84671974113744!3d-23.64757710167212!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1650291630297!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" onmousemove="mapaZoom()" onmouseout="mapaNormal()" id="a"></iframe>
     </div>
   </div>
 
@@ -223,9 +233,11 @@
 
 
 
-
+    <script src="assets/js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></scri>
+    
 
   </body>
-</html>
+
+  </html>
